Add new api to return the list of the categories, Change the seeder, Add CategorySeeder
